[package]
name = "neure"
version = "0.4.0"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A fast little combinational parsing library"
repository = "https://github.com/araraloren/neure/"
keywords = ["regex", "parser"]
categories = ["parsing"]

[profile.release-lto]
inherits = "release"
lto = true

[dev-dependencies]
regex = "^1.0"
nom = "^7.1"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
color-eyre = "0.5.11"

[dependencies]
charize = "0.0.2"
tracing = { version = "0.1", optional = true }

[features]
log = ["tracing"]