[package]
name = "neure"
version = "0.6.1"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A fast little combinational parsing library"
repository = "https://github.com/araraloren/neure/"
keywords = ["regex", "parser"]
categories = ["parsing"]

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
regex = "1.0"
nom = "7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.5"
criterion = "0.5"

[dependencies]
charize = "0.0.2"
tracing = { version = "0.1", optional = true }

[features]
log = ["tracing"]

[[bench]]
name = "nom_cap"
path = "./bench/nom_cap.rs"
harness = false

[[bench]]
name = "regex_cap"
path = "./bench/regex_cap.rs"
harness = false

[[bench]]
name = "regex_nocap"
path = "./bench/regex_nocap.rs"
harness = false

[[bench]]
name = "json"
path = "./bench/json.rs"
harness = false
